# sync-nudger

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  install.sh
.github/: release_body.md
.github/workflows/: release.yml
src/: app.rs  audio_metadata.rs  audio_processing.rs  cli.rs  ffmpeg.rs  main.rs  task.rs  util.rs
