[package]
name = "sync-nudger"
version = "0.3.5"
edition = "2024"
repository = "https://github.com/dlahmad/sync-nudger"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.11.1"
comfy-table = "7.1.4"
serde_json = "1.0.140"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
